# p4home

./: .gitignore  AGENT.md  README.md
.githooks/: pre-push
docs/: cloud-codex-hardware-validation.md  esp-idf-v5.5.4-activation-skill.md  esp-idf-v5.5.4-install.md  esp32-p4-smart-panel-plan.md  firmware-scaffold.md  github-milestones.md  harness-workflow.md  m1-boot-diagnostics-baseline.md  m1-hardware-flash-serial-validation.md  m2-display-lvgl-bootstrap.md  m2-gt911-i2c-touch-diagnostics.md  m2-local-settings-page.md  m2-lvgl-touch-indev-validation.md  m3-audio-codec-bringup.md  m3-audio-startup-selftest.md  m3-esp-sr-afe-runtime-selftest.md  m3-esp-sr-afe-scaffold.md  m3-esp-sr-fixed-command-baseline.md  m3-esp-sr-model-partition-staging.md  m3-esp-sr-runtime-loop.md  m3-microphone-level-meter.md  p4-local-validation-plan.md  project-milestones.md  readme-idf-version-policy.md  repository-harness-bootstrap.md  sdkconfig-file-roles.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/components/ui_pages/: CMakeLists.txt  Kconfig.projbuild  README.md  ui_fonts.h  ui_page_dashboard.c  ui_pages.c  ui_status_banner.c
firmware/components/ui_pages/cards/: ui_card_binary.c  ui_card_binary.h  ui_card_multiline.c  ui_card_multiline.h  ui_card_numeric.c  ui_card_numeric.h  ui_card_trend.c  ui_card_trend.h  ui_card_weather.c  ui_card_weather.h
firmware/components/ui_pages/include/: ui_page_dashboard.h  ui_pages.h  ui_status_banner.h
scripts/: activate-idf-v5.5.4.sh  finalize-plan.sh  git-commit.sh  git-push.sh  install-hooks.sh  (+1 more)
(+100 files in other folders)
